# bbqueue

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  azure-pipelines.yml  miri.sh
.github/workflows/: build.yml  ci.yml  doctests.yml  embedded-builds.yml  fmt.yml  full-test.yml  miri.yml  tsan-test.yml
bbq-hacky-test/: Cargo.toml
bbq-hacky-test/src/: main.rs
bbq2/: Cargo.toml  README.md
bbq2/.github/workflows/: build.yml
bbq2/src/: lib.rs  nicknames.rs  queue.rs
bbq2/src/prod_cons/: framed.rs  mod.rs  stream.rs
bbq2/src/traits/: bbqhdl.rs  storage.rs
bbq2/src/traits/coordination/: cas.rs  cs.rs
bbq2/src/traits/notifier/: blocking.rs  maitake.rs  mod.rs  polling.rs
bbqtest/: Cargo.toml
bbqtest/src/: async_framed.rs  async_usage.rs  benches.rs  framed.rs  lib.rs  multi_thread.rs  ring_around_the_senders.rs  single_thread.rs
bbqueue/: Cargo.toml
bbqueue/src/: lib.rs  nicknames.rs  queue.rs
bbqueue/src/prod_cons/: framed.rs  stream.rs
bbqueue/src/traits/: storage.rs
bbqueue/src/traits/coordination/: cas.rs  cs.rs  mod.rs
bbqueue/src/traits/notifier/: maitake.rs  mod.rs
ci/: azure-install-rust.yml  test.sh
core/: Cargo.toml  storage-notes.md
core/src/: atomic.rs  atomic_shim.rs  bbbuffer.rs  cm_mutex.rs  common.rs  framed.rs  heap.rs  lib.rs  ng.rs  signal.rs  vusize.rs  waker.rs
legacy-bbqtest/: Cargo.toml
legacy-bbqtest/src/: lib.rs  multi_thread.rs  ring_around_the_senders.rs  single_thread.rs
legacy-core/: Cargo.toml
legacy-core/src/: bbbuffer.rs  framed.rs  lib.rs  vusize.rs
miri-repro/: Cargo.toml
miri-repro/src/: main.rs
src/: bbqueue.rs  lib.rs  main.rs  nicknames.rs  queue.rs
src/prod_cons/: framed.rs  mod.rs  stream.rs
src/traits/: bbqhdl.rs  coordination.rs  mod.rs  notifier.rs  storage.rs
src/traits/coordination/: cas.rs  cs.rs  mod.rs
src/traits/notifier/: blocking.rs  maitake.rs  mod.rs
