[package]
name = "bbq2"
version = "0.1.0"
edition = "2021"

[dependencies]

# [dependencies.tokio]
# version = "1.0"
# default-features = false
# features = ["sync"]
# optional = true

[dependencies.maitake-sync]
version = "0.1"
default-features = false
optional = true

[dependencies.critical-section]
version = "1.0"
default-features = false
optional = true

[dev-dependencies.tokio]
version = "1.0"
features = ["macros", "rt", "time"]

[features]
default = [
    "cas-atomics",
    "std",
    "maitake-sync-0_1",
    "critical-section",
    # "tokio-sync",
]
cas-atomics = []
critical-section = [
    "dep:critical-section",
]
std = []
# tokio-sync = [
#     "dep:tokio",
# ]
maitake-sync-0_1 = [
    "dep:maitake-sync",
]
