[package]
name = "bbq2"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.maitake-sync]
version = "0.1"
default-features = false
optional = true

[dependencies.critical-section]
version = "1.0"
default-features = false
optional = true

[dev-dependencies.tokio]
version = "1.0"
features = ["macros", "rt", "time"]

[features]
default = [
    "cas-atomics",
    "std",
    "maitake-sync-0_1",
    "critical-section",
    # "tokio-sync",
]
cas-atomics = []
critical-section = [
    "dep:critical-section",
]
std = []
# tokio-sync = [
#     "dep:tokio",
# ]
maitake-sync-0_1 = [
    "dep:maitake-sync",
]

[patch.crates-io.maitake-sync]
git = "https://github.com/jamesmunns/mycelium/"
rev = "3d70f02bcc0de0e0cc0602ddc2b4aee7a34c5201"
