[package]
name = "bbq2"
version = "0.1.0"
description = "A SPSC, lockless, no_std, thread safe, queue, based on BipBuffers"
repository = "https://github.com/jamesmunns/bbq2"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "README.md"

categories = [
    "embedded",
    "no-std",
    "memory-management",
]
license = "MIT OR Apache-2.0"

[dependencies]

[dependencies.maitake-sync]
version = "0.2"
default-features = false
optional = true

[dependencies.critical-section]
version = "1.0"
default-features = false
optional = true

[dev-dependencies.tokio]
version = "1.0"
features = ["macros", "rt", "time"]

[features]
default = [
    "cas-atomics",
    "std",
    "maitake-sync-0_2",
    "critical-section",
    # "tokio-sync",
]
cas-atomics = []
critical-section = [
    "dep:critical-section",
]
std = []
# tokio-sync = [
#     "dep:tokio",
# ]
maitake-sync-0_2 = [
    "dep:maitake-sync",
]
