[package]
name = "bbqtest"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies.bbqueue]
path = "../core"
features = ["std"]

[dependencies.generic-array]
version = "0.12"

[dev-dependencies]
rand = "0.6"
criterion = "0.3"
crossbeam-utils = "0.7"
crossbeam = "0.7"

[[bench]]
name = "benches"
harness = false
path = "src/benches.rs"

[features]
travisci = ["verbose"]
default = []
verbose = []
extra-verbose = []
