[package]
name = "bbqtest"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
bounded-spsc-queue = { version = "0.4.0", optional = true }

[dependencies.bbqueue]
path = "../core"
package = "bbqueue-sync"


[dev-dependencies]
rand = "0.6"
criterion = "0.3"
crossbeam-utils = "0.7"
crossbeam = "0.7"
heapless = "0.7"
cfg-if = "0.1"

[[bench]]
name = "benches"
harness = false
path = "src/benches.rs"

[features]
travisci = ["verbose"]
default = []
verbose = []
nightly = ["bounded-spsc-queue"]
extra-verbose = []
short-potato = []
