[package]
name = "bbqtest"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bounded-spsc-queue = { version = "0.4.0", optional = true }

[dependencies.bbqueue]
path = "../core"


[dev-dependencies]
rand = "0.8"
criterion = "0.5"
crossbeam-utils = "0.8"
crossbeam = "0.8"
heapless = "0.8"
cfg-if = "1.0"

[[bench]]
name = "benches"
harness = false
path = "src/benches.rs"

[features]
travisci = ["verbose"]
default = []
verbose = []
nightly = ["bounded-spsc-queue"]
extra-verbose = []
short-potato = []
