[package]
name = "bbqueue"
version = "0.5.0"
description = "A SPSC, lockless, no_std, thread safe, queue, based on BipBuffers"
repository = "https://github.com/jamesmunns/bbqueue"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
readme = "../README.md"

categories = [
    "embedded",
    "no-std",
    "memory-management",
]
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.6.0", optional = true }
embassy-sync = { version = "0.1.0" } #, optional = true }

[features]
thumbv6 = ["cortex-m"]

[package.metadata.docs.rs]
all-features = true
