[package]
name = "bbqueue"
version = "0.5.1"
description = "A SPSC, lockless, no_std, thread safe, queue, based on BipBuffers"
repository = "https://github.com/jamesmunns/bbqueue"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2021"
readme = "../README.md"

categories = [
    "embedded",
    "no-std",
    "memory-management",
]
license = "MIT OR Apache-2.0"

[dependencies]
portable-atomic = { version = "1.5.1", default-features = false, features = ["require-cas"] }
defmt = { version = "0.3.0", optional = true }

[package.metadata.docs.rs]
all-features = true
