[package]
name = "miri-repro"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bbqueue]
version = "0.4.0-alpha4"
path = "../core"
features = ["std"]
